--- a/app/src/main/res/layout/fragment_toast.xml
+++ b/app/src/main/res/layout/fragment_toast.xml
@@ -1,13 +1,122 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="nirva.mywedding.ToastFragment">
-
+    tools:context="nirva.mywedding.ToastFragment"
+    android:background="?android:attr/colorControlHighlight">
 
     <TextView
+        android:id="@+id/opps"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Toast fragment" />
+        android:text="Opps.."
+        android:gravity="center"
+        android:textAlignment="center"
+        android:textSize="50dp" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="match_parent"
+        android:layout_height="424dp"
+        android:id="@+id/toastlinearlayout">
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/cardimage1"
+            android:layout_gravity="center"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:cardCornerRadius="5dp"
+            android:layout_marginBottom="20dp"
+            android:layout_marginTop="5dp"
+            android:layout_weight="1">
+
+            <ProgressBar
+                style="?android:attr/progressBarStyle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:id="@+id/pbmain"
+                android:layout_weight="1"
+                />
+
+            <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/imageViewtoast"
+                    android:layout_gravity="center" />
+        </android.support.v7.widget.CardView>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="3">
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardimage2"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="4dp"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="2">
+
+                <ImageButton
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:srcCompat="@android:drawable/ic_dialog_map"
+                    android:id="@+id/nav_btn"
+                    android:layout_gravity="center"/>
+            </android.support.v7.widget.CardView>
+            <android.support.v7.widget.CardView
+                android:id="@+id/cardimage3"
+                android:layout_gravity="center"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:cardCornerRadius="5dp"
+                app:cardElevation="4dp"
+                android:layout_marginLeft="2dp"
+                android:layout_weight="3">
+
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:text="11"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView5"
+                        android:gravity="center"
+                        android:layout_weight="3"
+                        android:textSize="40dp"
+                        android:textColor="@color/colorPrimary" />
+
+                    <TextView
+                        android:text="May"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView4"
+                        android:layout_weight="2"
+                        android:gravity="center" android:textSize="25dp"
+                        android:textColor="@color/colorPrimaryDark" />
+
+                    <TextView
+                        android:text="2017"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textView3"
+                        android:layout_weight="1"
+                        android:gravity="center" android:textSize="25dp"
+                        android:textColor="@color/colorPrimaryDark" />
+                </LinearLayout>
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+
+
+
+    </LinearLayout>
 
 </FrameLayout>
