--- a/app/src/main/res/menu/menu_user_content.xml
+++ b/app/src/main/res/menu/menu_user_content.xml
@@ -2,14 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="nirva.mywedding.User_content">
+
     <item
-        android:id="@+id/sign_out"
+        android:id="@+id/Contact_Developer"
         android:orderInCategory="100"
-        android:title="Sign Out"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:title="Contact Developer"
         app:showAsAction="never" />
 </menu>
